--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcc.c-torture/execute/va-arg-15.x, va-arg-16.x, va-arg-17.x:
+	Delete.
+
 Tue Jul 23 21:02:43 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* gcc.c-torture/compile/simd-4.c: New test.
