* doc/tm.texi: Update documentation.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55691 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -10,6 +10,7 @@
 	(mmix_asm_output_define_label_difference_symbol): Remove.
 	* config/mmix/mmix.h
 	(ASM_OUTPUT_DEFINE_LABEL_DIFFERENCE_SYMBOL): Remove.
+	* doc/tm.texi: Remove documentation.
 
 Tue Jul 23 21:49:24 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
